css/custom.css
/* ... */
@media (min-width: 992px) {
  header.masthead {
      padding-top: 12rem;

  }
  
  #mainNav.navbar-scrolled {
    background-color: #f1f1f1;
  }

}

  #mainNav.navbar-scrolled #ut-logo{
    background-color: #f1f1f1;
    margin-top:0;
  }

body, .navbar {
  background: #f1f1f1;
}

i.fas.fa-user.fa-4x.mb-4 {
    background: url(../img/first.jpg) no-repeat;
    width: 62px;
    height: 76px;
    background-size: 132%;
}

i.fas.fa-users.fa-4x.mb-4 {
    background: url(../img/second.jpg) no-repeat;
    width: 80px;
    height: 76px;
    background-size: 100%;
}

i.fas.fa-city.fa-4x.mb-4 {
    background: url(../img/third.jpg) no-repeat;
    width: 86px;
    height: 76px;
    background-size: 100%;
}

.masthead i.fas:before {
    content:"";
}

a.nav-link {
    border-bottom: 2px solid #e94700;
    text-align: center!important;
    padding: 10px 14px!important;
    color: #000!important;
    margin: 0;
    font-family: "Rubik"!important;
    font-weight: 400!important;
    margin: 0 1rem;
}

a.nav-link.lang-switch {
  color: #01499d!important;
  border:none;
  font-weight: 600!important;
  text-align: right;
}

#scrollTop {
  position: fixed;
  bottom: 0;
  right: 0;
  z-index: 40000;
}

#why h2 span,#unique h2 span {
    display: block;
    font-weight: 600;
}

#why h2,#unique h2 {
    font-size: 4rem;
    font-weight: 100;
    text-transform: uppercase;
    color: #da3400;
}

div#why-vorgustik .col{
    background: #01499d;
}

div#why-konkurents .col{
    background: #e94700;
}

div#why-areng .col{
    background: #46454a;
}

#why h4 {
    font-weight: 100;
    font-size: 3rem;
    text-align: left;
}

#why img {
  max-width: 150px;
  display: block;
  margin-bottom: 2rem;
}

#why small, #unique small {
    max-width: 33.33%!important;
    display: block;
    margin: auto;
    text-align: center;
    font-weight: 100;
    color: #46454a;
    margin-bottom: 3rem;
    line-height: 2rem;
}

div#why {
    margin-top: 10rem;
}

/* activities */
#activities h3, #stats h3 {
  color: #01499d;
  font-weight: bold;
}
#activities h5, #stats h5 {
  color: #46454a;
  font-weight: 600;
}

hr.divider.my-5 {
    max-width: 30rem;
    border-width: 0.1rem;
    border-color: #e94700;
}
.unique-box {
  height: min-content;
}
.unique-box .col {
    /* height: max-content; */
    min-height: 390px;
}
.unique-box h3 {
  text-transform: uppercase;
  font-weight: 600;
  color: white;
  text-align: left;
}

.unique-box img {
  width:100%;
}

.unique-box span {
  color: white;
  text-align: left;
  font-weight: 100;
}
#unique-kaedkulge .col {
  background: #01499d;
}
#unique-interditsiplinaarne .col {
  margin-top: 3rem;
  background: #e94700;
}
#unique-tulevikuoskused .col {
  margin-top: 6rem;
  background: #01499d;
}
#unique-paindlik .col {
  margin-top: 9rem;
  background: #46454a;
}
.unique-box .col {
    position: relative;
}
.unique-box .col span {
   position: absolute;
   bottom: 0;
   right: 0;
   padding: 1rem;
}

footer .contact-us {
  color: #01499d;
  line-height: 2.4rem;
  font-weight: 600;
  font-size: 2.1rem;
}
footer .contact-us-info {
  font-weight: 100;
}
footer a {
  color: #e94700;
  font-weight: 600;
}

footer .copyright {
  font-weight: 600;
}

footer .socialmedia i {
  margin-left:.5rem;
}

#scrollTop a.scrollDown.text-uppercase:before {
  content: "<";
  margin-right: 1rem;
  font-size: 29px;
  position: relative;
  top: 5px;
  font-weight: 100;
}

#scrollTop a.text-uppercase {
  font-weight:600;
  color:#3d3d3d;
  text-decoration: none;
  transform: rotate(270deg);
  transition: 1s all ease-in-out;
}

#scrollTop a.scrollBack.text-uppercase:after {
    content: ">";
    margin-left: 1rem;
    font-size: 29px;
    position: relative;
    top: 5px;
    font-weight: 100;
}
#scrollTop .scrollBack {
  opacity: 0;
}
#scrollTop.navbar-scrolled {
  bottom: 60px;
}
#scrollTop.navbar-scrolled .scrollBack {
  opacity:1;

}
#scrollTop.navbar-scrolled .scrollDown {
  opacity: 0;
}

#scrollTop {
    position: fixed;
    bottom: 170px;
    right: -105px;
    z-index: 40000;
    transform: rotate(270deg);
   transition: 1s all ease-in-out;
}

#stats i , #masthead i, #why i, #unique i {
    background: url(../img/icons.png);
    height: 100px;
    width: 100px;
    display: block;
    margin: auto;
}

#stats i#stat-praktikant {
    background-position: -25px -360px;
}

#stats i#stat-projekt {
    background-position: -110px -360px;
}

#stats i#stat-praktikapakkumine {
    background-position: -220px -360px;
}

#stats i#stat-organisatsioon {
    background-position: -314px -360px;
}
#masthead i {
    margin: 2rem 0 1rem 3rem;
}

#masthead .card {
    cursor: default;
}

#masthead i#masthead-yliopilane {
    background-position: 0px -100px;
}

#masthead i#masthead-projekt {
    background-position: -80px -100px;
}

#masthead i#masthead-praktikapakkumine {
    background-position: -180px -100px;
}
#why i {
  height: 150px;
  width: 130px;
  margin: 0;
}
#why i#why--vorgustik {
  background-position: -26px -215px;
}
#why i#why--konkurents {
  background-position: -302px -215px;
}
#why i#why--areng {
  background-position: -168px -215px;
}
#unique i {
  height: 130px;
  width: 210px;
  margin: 0px;
  display: block;
}
#unique i.unique-arrow {
  background-position: -24px -476px;
}

body.practice .card-body{
  padding:0;
}

#about img {
  filter: saturate(0);
  max-width: 200px;
}

.toggleMenu {
    display: block;
    text-align: left;
    font-size: 2rem;
    font-weight: 600;
    line-height: 2.5rem;
    border-bottom: 2px solid;
    padding: 0!important;
    padding-bottom: 1rem!important;
    color: #01499d!important;
    transition: .25s all ease-in-out;
    max-width: 200px;
}

.toggleMenu:hover {
  cursor: pointer;
  opacity: .7;
}

body.practice .page-section h5,
body.practiceoffers .page-section h5,
body.project .page-section h5{
  color: #01499d;
  font-size:1.5rem;
}

section h1 {
    font-size: 4.5rem;
    color: #e94700;
}
/* ... */

